# EmployeeManagement

./: .replit  main.py  pyproject.toml  requirements.txt
website/: __init__.py  auth.py  models.py  views.py
website/static/css/: employee.css  pdf.css
website/templates/: add_employee.html  add_location.html  base.html  complete_employee.html  dashboard.html  display.html  documents.html  edit_employee.html  edit_role.html  employee.html  employee_details.html  employee_pdf.html  employeeform.html  idcard.html  photo.html  role.html  view_documents.html
