[tool.poetry]
name = "repl-nix-employeemanagement"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_employeemanagement"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
django-security = "^0.12.0"
flask-cors = "^4.0.0"
wkhtmltopdf = "0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
